# test-wf-sync

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: get-sync-results.yml  get-sync-status.yml  get-sync.yml  sync-resources.yml  test-sync.yaml  test-sync.yml
docs/: glossary.md  index.md
docs/sample-release-notes/: 0.0.0.md  index.md
docs/sample-user-guide/: admonitions.md  index.md  installation.md  sample-feature.md
scripts/: build.sh  get-api.sh  print-vars.sh
