[tool.poetry]
name = "harmonic-mkdocs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "harmonic_mkdocs"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
adi-mkdocs-harmonic = "^0.7.0"
mike = "2.1.3"
mkdocs-glightbox = "0.4.0"
mkdocs-print-site-plugin = "2.5.0"
mkdocs-material = "9.5.27"
mkdocs-material-extensions = "1.3.1"
pymdown-extensions = "10.3.1"
pyyaml-env-tag = "1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
